--- a/JavaScript/클로져.md
+++ b/JavaScript/클로져.md
@@ -70,5 +70,5 @@ result();
 - inner 함수 객체는 본인의 내부 슬롯에 저장된 상위 스코프에 의존하여 example 함수의 렉스컬 환경을 참조하기 때문에 가비지 컬렉션의 대상이 되지 않는다.
 - 즉, 실행 컨택스트 스택에서 example 함수가 제거 되지만, outer 함수의 렉시컬 환경까지 소멸되지는 않으므로 변수 a를 다시 참조할 수 있는 것이다.
 
-### 결론 
-- 클로져는 하나의 state가 의도치 않게 변동되지 않도록 안전하게 은닉하고, 특정 함수에게만 state 변경을 허용하기 위해 사용한다.
+## 결론 
+클로져는 하나의 state가 의도치 않게 변동되지 않도록 안전하게 은닉하고, 특정 함수에게만 state 변경을 허용하기 위해 사용한다.
