--- a/CS/브라우저 주소창에 검색 시 일어나는 일.md
+++ b/CS/브라우저 주소창에 검색 시 일어나는 일.md
@@ -1,8 +1,10 @@
-# 브라우저 주소창에 검색 시 일어나는 일.md
+# 브라우저 주소창에 검색 시 일어나는 일
+
 <img src="https://github.com/jinsupark4255/FE-TechInterview/assets/116702892/f1430320-818e-47f3-ab9a-35f6e26b2ae1" width="500" height="400">
 <br>이미지 출처: TCP School
 
 ## 작동 방식
+
 1. 사용자가 브라우저에 도메인 네임(www.example.com)을 입력
 2. 사용자가 입력한 URL 주소 중에서 도메인 네임 부분을 DNS 서버에서 검색, DNS 서버에서 해당 도메인 네임에 해당하는 IP 주소를 찾고 사용자가 입력한 URL 정보와 함께 전달
 3. 페이지 URL 정보와 전달받은 IP 주소는 HTTP 프로토콜을 사용하여 HTTP 요청 메시지를 생성, 생성된 HTTP 요청 메시지는 TCP 프로토콜을 사용하여 인터넷을 거쳐 해당 IP 주소의 컴퓨터로 전송
