Update 브라우저 주소창에 검색 시 일어나는 일.md

--- a/CS/브라우저 주소창에 검색 시 일어나는 일.md
+++ b/CS/브라우저 주소창에 검색 시 일어나는 일.md
@@ -4,9 +4,27 @@
 
 ## 작동 방식
 
+### DNS 파트
 1. 사용자가 브라우저에 도메인 네임(www.example.com)을 입력
 2. 사용자가 입력한 URL 주소 중에서 도메인 네임 부분을 DNS 서버에서 검색, DNS 서버에서 해당 도메인 네임에 해당하는 IP 주소를 찾고 사용자가 입력한 URL 정보와 함께 전달
 3. 페이지 URL 정보와 전달받은 IP 주소는 HTTP 프로토콜을 사용하여 HTTP 요청 메시지를 생성, 생성된 HTTP 요청 메시지는 TCP 프로토콜을 사용하여 인터넷을 거쳐 해당 IP 주소의 컴퓨터로 전송
 4. 도착한 HTTP 요청 메시지는 HTTP 프로토콜을 사용하여 웹 페이지 URL 정보로 변환되어 웹 페이지 URL 정보에 해당하는 데이터를 검색
 5. 검색된 웹 페이지 데이터는 HTTP 프로토콜을 사용하여 HTTP 응답 메시지를 생성, TCP 프로토콜을 사용하여 인터넷을 거쳐 원래 컴퓨터로 전송
 6. 도착한 HTTP 응답 메시지는 HTTP 프로토콜을 사용하여 웹 페이지 데이터로 변환되어 웹 브라우저에 의해 출력되어 사용자가 볼 수 있다
+
+### 브라우저 렌더링 파트
+1. byte Stream 으로 들어온 데이터를 브라우저가 읽는다.
+2. HTML 코드는 이를 토큰화 하여 <head>태그 <body> 태그를 노드화 한다.
+3. 노드화 된 데이터를 가지고 DOM 트리를 그린다. (누가 부모고 누가 자식인지 나타내는 트리)
+4. CSS 코드는 HTML 코드를 읽다가 link 태그 만날 때 서버에서 불러와진다.
+5. CSS 코드도 HTML 코드와 똑같이 작동해서 CSSOM 트리를 그리게 된다.
+6. 이후 JS 파일을 서버로부터 받게 되면 해당 시간 동안은 DOM 만들어지는게 멈춘다. (JS에서 HTML 코드 변경이 가능하므로)
+7. DOM과 CSSOM이 합쳐진 Render Tree가 만들어진다.
+8. Layout 확인이 진행된다. (정확한 px 값을 보는 단계)
+9. Paint 단계가 진행된다. (픽셀 하나하나를 그리는 단계. 레이어 하나하나)
+10. Composite 단계가 진행된다 (Layout과 Paint 한꺼번에 합치는 작업)
+```
+Layout과 Paint 단계는 웹 사이트를 사용하면서 반복되는데
+viewport 크기 변경이 되거나 reflow (Layout을 바꾸는 과정 : 비용이 크다)가 될때 반복되므로
+웹 성능을 좋게 만드려면, reflow와 repaint를 줄여야한다.
+```
