Update 브라우저 주소창에 검색 시 일어나는 일.md

--- a/CS/브라우저 주소창에 검색 시 일어나는 일.md
+++ b/CS/브라우저 주소창에 검색 시 일어나는 일.md
@@ -1,18 +1,16 @@
 # 브라우저 주소창에 검색 시 일어나는 일
 
-<img src="https://github.com/jinsupark4255/FE-TechInterview/assets/116702892/f1430320-818e-47f3-ab9a-35f6e26b2ae1" width="500" height="400">
-
-## 작동 방식
-
-### DNS 파트
-1. 사용자가 브라우저에 도메인 네임(www.example.com)을 입력
-2. 사용자가 입력한 URL 주소 중에서 도메인 네임 부분을 DNS 서버에서 검색, DNS 서버에서 해당 도메인 네임에 해당하는 IP 주소를 찾고 사용자가 입력한 URL 정보와 함께 전달
-3. 페이지 URL 정보와 전달받은 IP 주소는 HTTP 프로토콜을 사용하여 HTTP 요청 메시지를 생성, 생성된 HTTP 요청 메시지는 TCP 프로토콜을 사용하여 인터넷을 거쳐 해당 IP 주소의 컴퓨터로 전송
-4. 도착한 HTTP 요청 메시지는 HTTP 프로토콜을 사용하여 웹 페이지 URL 정보로 변환되어 웹 페이지 URL 정보에 해당하는 데이터를 검색
-5. 검색된 웹 페이지 데이터는 HTTP 프로토콜을 사용하여 HTTP 응답 메시지를 생성, TCP 프로토콜을 사용하여 인터넷을 거쳐 원래 컴퓨터로 전송
+## DNS 파트
+<img src="https://github.com/jinsupark4255/FE-TechInterview/assets/116702892/f1430320-818e-47f3-ab9a-35f6e26b2ae1" width="500" height="400"><br>
+1. 사용자가 브라우저에 도메인 네임(www.example.com)을 입력<br>
+2. 사용자가 입력한 URL 주소 중에서 도메인 네임 부분을 DNS 서버에서 검색, DNS 서버에서 해당 도메인 네임에 해당하는 IP 주소를 찾고 사용자가 입력한 URL 정보와 함께 전달<br>
+3. 페이지 URL 정보와 전달받은 IP 주소는 HTTP 프로토콜을 사용하여 HTTP 요청 메시지를 생성, 생성된 HTTP 요청 메시지는 TCP 프로토콜을 사용하여 인터넷을 거쳐 해당 IP 주소의 컴퓨터로 전송<br>
+4. 도착한 HTTP 요청 메시지는 HTTP 프로토콜을 사용하여 웹 페이지 URL 정보로 변환되어 웹 페이지 URL 정보에 해당하는 데이터를 검색<br>
+5. 검색된 웹 페이지 데이터는 HTTP 프로토콜을 사용하여 HTTP 응답 메시지를 생성, TCP 프로토콜을 사용하여 인터넷을 거쳐 원래 컴퓨터로 전송<br>
 6. 도착한 HTTP 응답 메시지는 HTTP 프로토콜을 사용하여 웹 페이지 데이터로 변환되어 웹 브라우저에 의해 출력되어 사용자가 볼 수 있다
 
-### 브라우저 렌더링 파트
+## 브라우저 렌더링 파트
+![image](https://github.com/jinsupark4255/FE-TechInterview/assets/116702892/6e763140-137f-4863-9d78-bef77ad2d7f7)
 1. byte Stream 으로 들어온 데이터를 브라우저가 읽는다.
 2. HTML 코드는 이를 토큰화 하여 <head>태그 <body> 태그를 노드화 한다.
 3. 노드화 된 데이터를 가지고 DOM 트리를 그린다. (누가 부모고 누가 자식인지 나타내는 트리)
