Update 브라우저 주소창에 검색 시 일어나는 일.md

--- a/CS/브라우저 주소창에 검색 시 일어나는 일.md
+++ b/CS/브라우저 주소창에 검색 시 일어나는 일.md
@@ -12,7 +12,7 @@
 ## 브라우저 렌더링 파트
 ![image](https://github.com/jinsupark4255/FE-TechInterview/assets/116702892/6e763140-137f-4863-9d78-bef77ad2d7f7)
 1. byte Stream 으로 들어온 데이터를 브라우저가 읽는다.
-2. HTML 코드는 이를 토큰화 하여 <head>태그 <body> 태그를 노드화 한다.
+2. HTML 코드는 이를 토큰화 하여 head태그 body 태그 등등을 노드화 한다.
 3. 노드화 된 데이터를 가지고 DOM 트리를 그린다. (누가 부모고 누가 자식인지 나타내는 트리)
 4. CSS 코드는 HTML 코드를 읽다가 link 태그 만날 때 서버에서 불러와진다.
 5. CSS 코드도 HTML 코드와 똑같이 작동해서 CSSOM 트리를 그리게 된다.
