--- a/JavaScript/클로져.md
+++ b/JavaScript/클로져.md
@@ -89,4 +89,5 @@ result();
 
 ## 결론
 
-클로져는 하나의 state가 의도치 않게 변동되지 않도록 안전하게 은닉하고, 특정 함수에게만 state 변경을 허용하기 위해 사용한다.
+클로져는 함수가 선언된 환경을 "기억"하는 특성을 말한다.<br/>
+하나의 state가 의도치 않게 변동되지 않도록 안전하게 은닉하고, 특정 함수에게만 state 변경을 허용하기 위해 사용한다.
